--- a/EDA-and-preprocessing.Rmd
+++ b/EDA-and-preprocessing.Rmd
@@ -2,9 +2,7 @@
 title: "Exploring one Variable"
 author: "Shankar"
 date: "October 1, 2016"
-output:  
-  html_document:
-    keep_md: true
+output: rmarkdown::github_document
 --- 
 
 # Setup
